# api/Features/Race/Insert/Request.cs
@@ -3,6 +3,5 @@ namespace LeTrack.Features.Race.Insert;
 public class Request
 {
     public string Name { get; set; } = string.Empty;
-    public List<int> Players { get; set; } = new();
-    public bool IsFirstTracks { get; set; } = true;
+    public List<int> Players { get; set; } = [];
 }
