# api/Features/Race/Update/Endpoint.cs
@@ -4,14 +4,9 @@ using Microsoft.EntityFrameworkCore;
 
 namespace LeTrack.Features.Race.Update;
 
-public class Endpoint : Endpoint<Request, Entities.Race>
+public class Endpoint(AppDbContext dbContext) : Endpoint<Request, Entities.Race>
 {
-    private readonly AppDbContext _dbContext;
-
-    public Endpoint(AppDbContext dbContext)
-    {
-        _dbContext = dbContext;
-    }
+    private readonly AppDbContext _dbContext = dbContext;
 
     public override void Configure()
     {
@@ -25,27 +20,22 @@ public class Endpoint : Endpoint<Request, Entities.Race>
             throw new Exception("No players provided");
         }
 
-        if (req.Players.Count > 2)
+        if (req.Players.Count != 4)
         {
-            throw new Exception("Only two lanes supported for now");
+            throw new Exception("Only four lanes supported for now");
         }
 
-        Entities.Race? race = await _dbContext.Race.FirstOrDefaultAsync(x => x.Id == req.Id, ct);
-        if (race == null)
-        {
-            throw new Exception("Race not found");
-        }
-
+        Entities.Race? race = await _dbContext.Race.FirstOrDefaultAsync(x => x.Id == req.Id, ct) ?? throw new Exception("Race not found");
         var prevRaceTracks = await _dbContext.RaceTrack.Where(x => x.RaceId == req.Id).ToListAsync(ct);
         _dbContext.RaceTrack.RemoveRange(prevRaceTracks);
 
 
-        List<RaceTrack> raceTracks = [.. req.Players.Select((x, i) => new RaceTrack { PlayerId = x, TrackId = i + 1 + (req.IsFirstTracks == true ? 0 : 2) })];
+        List<RaceTrack> raceTracks = [.. req.Players.Select((x, i) => new RaceTrack { PlayerId = x, TrackId = i + 1 })];
 
         race.RaceTracks = raceTracks;
         race.Name = req.Name;
 
-        await _dbContext.SaveChangesAsync();
-        await Send.OkAsync(race);
+        await _dbContext.SaveChangesAsync(ct);
+        await Send.OkAsync(race, ct);
     }
 }
