# api/Features/Race/Update/Request.cs
@@ -4,6 +4,5 @@ public class Request
 {
     public int Id { get; set; }
     public string Name { get; set; } = string.Empty;
-    public List<int> Players { get; set; } = new();
-    public bool IsFirstTracks { get; set; } = true;
+    public List<int> Players { get; set; } = [];
 }
